<resources>
    <string name="app_name">First Kotlin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="learner_cloud_io">learnercloud.io</string>
    <string name="loginActivity">New Activity</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="emailText">Email Address</string>
    <string name="passwordText">Password</string>
    <string name="emailHintText">Enter your email address</string>
    <string name="passwordHintText">Enter your password</string>
    <string name="imageDescription">Logo will be added here</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="fNameHint">Enter first name</string>
    <string name="lNameHint">Enter last name</string>
    <string name="phoneHint">Enter phone number</string>
    <string name="welcomeUser">Welcome, Instructor!</string>
    <string name="recordVideoBUTTON">Record Video</string>
    <string name="forgotPass">Forgot Credentials?</string>
    <string name="selectedStudentDisplay">Student: </string>

    <string-array name="students">
        <item>Zafar</item>
        <item>Elon Musk</item>
        <item>Shah Khan</item>
        <item>Azam</item>
        <item>Bob</item>
    </string-array>

    <string name="selectedStudent">The student is %s</string>
    <string name="defaultSelection">Please select a student from above</string>

    <string name="startButton">Start/Stop</string>
</resources>
